--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,12 @@
 			<artifactId>springfox-boot-starter</artifactId>
 			<version>3.0.0</version> 
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-config</artifactId>
+			<version>6.1.5</version> 
+		</dependency>
 		
 	</dependencies>
 
